--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,21 @@
     </repositories>
     
     <dependencies>
+    
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-formengine</artifactId>
             <version>[2.2.6-SNAPSHOT,3.0.0-SNAPSHOT)</version>
             <type>lutece-plugin</type>
-        </dependency>   
+        </dependency>
+        
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-gis</artifactId>
+            <version>[2.0.0-SNAPSHOT,3.0.0-SNAPSHOT)</version>
+            <type>lutece-plugin</type>
+        </dependency>
+           
     </dependencies>
     
     <properties>
