FORMENGINEGIS-2 / Implement Plugin GIS PM 2012 lot 1 / Geocoding and inverse geocoding / Form Engine support (Fixes sample-gis.xml to gis.xml.sample)
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-formengine-gis@40369 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/plugins/formengine/xmlformdefinitions/gis.xml.sample
+++ b/webapp/WEB-INF/plugins/formengine/xmlformdefinitions/gis.xml.sample
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<formDefinition name="gis-form" className="">
+<formDefinition name="gis" className="">
     <title>Formulaire localisation GIS</title>
     <subForms>
   
@@ -39,7 +39,7 @@
     </subForms>
     <outputs>
         <outputSet useTransactionHeaders="false" >
-            <output outputProcessorClassName="fr.paris.lutece.plugins.formengine.modules.service.output.FileOutputProcessor" />
+            <output outputProcessorClassName="fr.paris.lutece.plugins.formengine.service.output.FileOutputProcessor" />
         </outputSet>
     </outputs>
  
