--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-formengine</artifactId>
-            <version>[2.2.6-SNAPSHOT,3.0.0-SNAPSHOT)</version>
+            <version>[2.3.0,3.0.0-SNAPSHOT)</version>
             <type>lutece-plugin</type>
         </dependency>
         
