--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>module-formengine-gis</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>Lutece Form Engine module for GIS address assistance</name>
     
     <repositories>
@@ -46,9 +46,9 @@
     </properties>
     
     <scm>
-        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-formengine-gis</connection>
-        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-formengine-gis</developerConnection>
-        <url>http://dev.lutece.paris.fr/wsvn/lutece/portal/trunk/plugins/technical/module-formengine-gis/</url>
+        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/tags/module-formengine-gis-1.0.0</connection>
+        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/tags/module-formengine-gis-1.0.0</developerConnection>
+        <url>http://dev.lutece.paris.fr/wsvn/lutece/portal/tags/module-formengine-gis-1.0.0</url>
     </scm>
     
 </project>
