--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-gis</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2-SNAPSHOT</version>
             <type>lutece-plugin</type>
         </dependency>
            
