--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <repositories>
         <repository>
             <id>lutece</id>
-            <name>luteceRepository</name>
+            <name>luteceRepository</name> 
             <url>http://dev.lutece.paris.fr/maven_repository</url>
             <layout>default</layout>
         </repository>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-gis</artifactId>
-            <version>2.0.2-SNAPSHOT</version>
+            <version>2.0.2</version> 
             <type>lutece-plugin</type>
         </dependency>
            
