--- a/pom.xml
+++ b/pom.xml
@@ -1,54 +1,45 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
     <parent>
-        <artifactId>lutece-plugins-pom</artifactId>
-        <groupId>fr.paris.lutece.plugins</groupId>
-        <version>3.7</version>
+        <artifactId>lutece-global-pom</artifactId>
+        <groupId>fr.paris.lutece.tools</groupId>
+        <version>3.0.12</version>
     </parent>
-    
     <modelVersion>4.0.0</modelVersion>
+    <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-formengine-gis</artifactId>
     <packaging>lutece-plugin</packaging>
     <version>1.0.3-SNAPSHOT</version>
     <name>Lutece Form Engine module for GIS address assistance</name>
-    
     <repositories>
         <repository>
             <id>lutece</id>
-            <name>luteceRepository</name> 
+            <name>luteceRepository</name>
             <url>http://dev.lutece.paris.fr/maven_repository</url>
             <layout>default</layout>
         </repository>
     </repositories>
-    
     <dependencies>
-    
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-formengine</artifactId>
             <version>[2.3.0,3.0.0-SNAPSHOT)</version>
             <type>lutece-plugin</type>
         </dependency>
-        
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-gis</artifactId>
-            <version>2.0.2</version> 
+            <version>2.0.2</version>
             <type>lutece-plugin</type>
         </dependency>
-           
     </dependencies>
-    
     <properties>
         <componentName>formengine-gis</componentName>
         <jiraProjectName>FORMENGINEGIS</jiraProjectName>
         <jiraComponentId>10662</jiraComponentId>
     </properties>
-    
     <scm>
-        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-formengine-gis</connection>
-        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/module-formengine-gis</developerConnection>
-        <url>http://dev.lutece.paris.fr/wsvn/lutece/portal/trunk/plugins/technical/module-formengine-gis/</url>
+        <connection>scm:git:https://github.com/lutece-platform/lutece-tech-module-formengine-gis.git</connection>
+        <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-module-formengine-gis.git</developerConnection>
+        <url>https://github.com/lutece-platform/lutece-tech-module-formengine-gis.git</url>
     </scm>
-    
 </project>
